default/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-app
  namespace: default

spec:
  parentRefs:
    - name: my-gateway

  hostnames:
    - app1.127.0.0.1.nip.io

  rules:
  - backendRefs:
      - name: whoami
        port: 80
        weight: 1
